# asteroid-blaster

./: CMakeLists.txt  README.md  asteroid-asteroids.desktop  asteroid-blaster.desktop  main.qml
recipe/: asteroid-asteroids.bb  asteroid-blaster.bb
